Virtualization/Kubernetes/k8s-examples/addons/ingress/echoserver/ingress.yaml
# Ingress example code by Jay Gorrell
# https://medium.com/@cashisclay/kubernetes-ingress-82aa960f658e
# To test:
#    curl -H 'Host:mysite.com' [NODE_IP]:[NODE_PORT]
#    curl [NODE_IP]:[NODE_PORT] will get a 404 response

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jayc-demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - host: mysite.com
    http:
      paths:
      - backend:
          serviceName: echoserver
          servicePort: 80
